# graphql-schema-rs

./: Cargo.toml  README.md
src/: main.rs  query.graphql  schema.graphql
