[package]
authors = ["lrlna <shestak.irina@gmail.com>"]
description = "Explorer for GraphQL schema"
edition = "2018"
name = "graphql-schema"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.9.0"
prettytable-rs = "^0.8"
reqwest = "0.9"
serde = "1.0.114"
serde_json = "1.0.57"
structopt = "0.3.16"
textwrap = "0.12.1"
